# UniLogic

./: .claude-terminal  .gitignore  C-Side-by-Side.html  CHANGELOG.md  JS-Side-by-Side.html  Java-Side-by-Side.html  Main.py  OnHover Buttons.txt  Project Outline  Python-Side-by-Side.html  README  README.md  Safety.md  about-author.html  authors-note.html  bytecode-spec.md  deployment-targets.html  dr-checker.html  dynamic-runtime.html  enterprise-annotations.html  enterprise-draft.html  error-handling.html  features.html  feedback.html  getting-started.html  glossary.html  index.html  industry-developments.html  interpreter.html  language-main.html  learn-ai-optimization.html  learn-bytecode.html  learn-dispatch.html  learn-jit.html  learn-quickening.html  learn-ubi-format.html  learning.html  memproof-explained.html  memproof-formal.html  pragma-reference.html  (+14 more)
Code-Clarity/: index.html
Compiler/: simplifycode.py
Compiler/AST Gen/: token2ast.py
Compiler/Lexer/: src2token.py
Compiler/Runtime/: Makefile  test_memory.c  (+9 more)
Docs/: LongList.docx  Shortlist ALL.docx  UniLogic Project Manager.spec  UniLogic_Compiler_Features.docx  UniLogic_DR_Reference.docx  UniLogic_Feature_Comparison.docx  UniLogic_IDE_Features.docx  UniLogic_Visual_Reference.docx
MemProof/: memproof.py
Multi-Agent Dashboard/: ul_dashboard.html  ul_orchestrator.py  ul_worker_prompt.md
Pragma XPile/: ast_nodes.py  codegen.py  lexer.py  parser.py  pragma.py  test.c  test.run
XPile 3-17/: CHANGELOG.md  List of Things.docx  LongList.docx  Shortlist ALL.docx  UniLogic_Feature_Comparison.docx  UniLogic_IDE_Features.docx  readme.txt
XPile 3-17/GUI_Qt/: BUILD.md  CMakeLists.txt  app.rc  buildtab.cpp  buildtab.h  commandpalette.cpp  commandpalette.h  drconfiguratortab.cpp  drconfiguratortab.h  drconflicttab.cpp  drconflicttab.h  drdiffviewer.cpp  drdiffviewer.h  drmonitor.cpp  drmonitor.h  editortab.cpp  editortab.h  exportdialog.cpp  exportdialog.h  filetreepanel.cpp  filetreepanel.h  helpdialogs.cpp  helpdialogs.h  main.cpp  mainwindow.cpp  mainwindow.h  newprojecttab.cpp  newprojecttab.h  normdiffviewer.cpp  normdiffviewer.h  outputpanel.cpp  outputpanel.h  packagestab.cpp  packagestab.h  plugin.h  pluginmanager.cpp  pluginmanager.h  projectstats.cpp  projectstats.h  repltab.cpp  (+12 more)
XPile 3-17/GUI_Qt/build2/: CMakeCache.txt  Makefile  cmake_install.cmake
XPile 3-17/GUI_Qt/build2/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
XPile 3-17/GUI_Qt/build2/UniLogicProjectManager_autogen/: deps  mocs_compilation.cpp
XPile 3-17/GUI_Qt/build2/UniLogicProjectManager_autogen/EWIEGA46WW/: moc_buildtab.cpp  moc_buildtab.cpp.d  moc_drconfiguratortab.cpp  moc_drconfiguratortab.cpp.d  moc_drconflicttab.cpp  moc_drconflicttab.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_newprojecttab.cpp  moc_newprojecttab.cpp.d
XPile 3-17/GUI_Qt/installer/: unilogic_setup.iss
repl-samples/: level1_temperature.c  level1_temperature.py  level1_temperature.ul  level2_primes.c  level2_primes.py  level2_primes.ul  level3_wordcount.c  level3_wordcount.py  level3_wordcount.ul  level4_linkedlist.c  level4_linkedlist.py  level4_linkedlist.ul  level_index.json
spec/: ul-spec.html  ul-spec.md
usams/: index.html
(+1131 files in other folders)
